ЛР3: задание 5 — fork+exec утилита run_exec и сборка в makefile

--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -1,12 +1,14 @@
-CC = gcc
-CFLAGS = -Wall -Wextra -std=c11
+CC       = gcc
+CFLAGS   = -Wall -Wextra -std=c11
 INCLUDES = -I.
-BIN_DIR = ..
+BIN_DIR  = ..
 
 COMMON_SRCS = find_min_max.c utils.c
 COMMON_OBJS = $(COMMON_SRCS:.c=.o)
 
-all: sequential parallel
+.PHONY: all sequential parallel run_exec clean run-seq run-par
+
+all: sequential parallel run_exec
 
 sequential: sequential_min_max.c $(COMMON_OBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $(BIN_DIR)/bin_sequential
@@ -14,11 +16,17 @@ sequential: sequential_min_max.c $(COMMON_OBJS)
 parallel: parallel_min_max.c $(COMMON_OBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) $^ -o $(BIN_DIR)/bin_parallel
 
+# сборка утилиты из задания 5 (fork + exec)
+run_exec: run_sequential_via_exec.c
+	$(CC) $(CFLAGS) $(INCLUDES) $< -o $(BIN_DIR)/run_exec
+
 %.o: %.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 clean:
-	rm -f $(COMMON_OBJS) $(BIN_DIR)/bin_sequential $(BIN_DIR)/bin_parallel mm_*.tmp
+	rm -f $(COMMON_OBJS) $(BIN_DIR)/bin_sequential $(BIN_DIR)/bin_parallel $(BIN_DIR)/run_exec mm_*.tmp
+
+# удобные «ран»-цели
 run-seq:
 	../bin_sequential $(SEED) $(N)
 
